# zephyr-galileo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
src/: dhcp_config.h  display.h  http_util.h  main.c
